--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -84,7 +84,7 @@
     "step.annen-foreldrens-situasjon.periode.fra": "Fra",
     "step.annen-foreldrens-situasjon.periode.til": "Til",
     "step.annen-foreldrens-situasjon.vetLengdePåInnleggelseperioden.spm": "Er det avklart hvor lenge innleggelsen skal vare?",
-    "step.annen-foreldrens-situasjon.advarsel.1": "Hvis perioden den andre forelderen ikke kan ta seg av barn er på mindre enn 6 måneder, vil du ikke bli regnet som alene om omsorgen.",
+    "step.annen-foreldrens-situasjon.advarsel.1": "Hvis perioden den andre forelderen ikke kan ta seg av barn er på mindre enn 6 måneder, kan det være at du ikke blir regnet som alene om omsorgen. Du kan likevel fortsette slik at vi kan vurdere søknaden din.",
     "step.annen-forelder-situasjon.nextButtonLabel": "Fortsett",
 
     "step.deres-felles-barn.pageTitle": "Deres felles barn",
