Tekst endringer i deres felles barn BR-1040

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -93,7 +93,7 @@
     "step.deres-felles-barn.stopMessage": "Du må legge til minst ett barn for å fortsette",
     "step.deres-felles-barn.nextButtonLabel": "Fortsett",
     "step.deres-felles-barn.hvorMangeBarn.spm": "Hvor mange felles barn har dere? Inkludert eventuelle fosterbarn",
-    "step.deres-felles-barn.hvorforSpører.svar": "Som hovedregel har du rett til omsorgsdager ut kalenderåret barnet fyller 12 år. Hvis du har søkt og fått ekstra omsorgsdager har du rett til disse ut kalenderåret barnet fyller 18 år.",
+    "step.deres-felles-barn.hvorforSpører.svar": "Vi trenger å vite alderen på barn for å kunne beregne hvor mange omsorgsdager du kan ha rett på og hvor lenge du har rett til å bruke omsorgsdager.",
 
     "step.medlemskap.pageTitle": "Medlemskap",
     "step.medlemskap.stepTitle": "Medlemskap",
