--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -60,7 +60,7 @@
     "step.om-annen-forelder.stepTitle": "Om den andre forelderen",
     "step.om-annen-forelder.banner": "Her legger du inn informasjon om den andre forelderen som ",
     "step.om-annen-forelder.banner.list.1": "du bor sammen med, og",
-    "step.om-annen-forelder.banner.list.2": "som ikke er i stand til å ta seg av barn i en periode på minst 6 måneder",
+    "step.om-annen-forelder.banner.list.2": "som ikke kan ha tilsyn med barn i en periode på minst 6 måneder",
     "step.om-annen-forlder.fnr.spm": "Skriv inn fødselsnummeret til den andre forelderen, 11 siffer",
     "step.om-annen-forlder.navn.spm": "Skriv inn navnet til den andre forelderen",
     "step.om-annen-forelder.nextButtonLabel": "Fortsett",
@@ -68,16 +68,16 @@
     "step.annen-foreldrens-situasjon.tittel": "Den andre forelderens situasjon",
     "step.annen-forelder-situasjon.pageTitle": "Den andre forelderens situasjon",
     "step.annen-forelder-situasjon.stepTitle": "Den andre forelderens situasjon",
-    "step.annen-foreldrens-situasjon.banner.1": "Her skal du gi informasjon om hva som er grunnen til at den andre forelderen ikke kan ta seg av barn i en periode på minst 6 måneder.",
+    "step.annen-foreldrens-situasjon.banner.1": "Her skal du gi informasjon om hva som er grunnen til at den andre forelderen ikke kan ha tilsyn med barn i en periode på minst 6 måneder.",
     "step.annen-foreldrens-situasjon.banner.2": "Husk at du ikke regnes for å være alene om omsorgen hvis den andre er mye borte fra hjemmet på grunn av jobb, skole eller studier.",
-    "step.annen-foreldrens-situasjon.grunn.spm": "Velg én av disse grunnene til at den andre forelderen ikke kan ta seg av barn i en periode på 6 måneder:",
+    "step.annen-foreldrens-situasjon.grunn.spm": "Velg én av disse grunnene til at den andre forelderen ikke kan ha tilsyn med barn i en periode på 6 måneder:",
     "step.annen-foreldrens-situasjon.grunn.sykdom": "Sykdom, skade eller funksjonhemming",
     "step.annen-foreldrens-situasjon.grunn.innlagtIHelseinstitusjon": "Innlagt i helseinstitusjon",
     "step.annen-foreldrens-situasjon.grunn.fengsel": "Fengsel",
     "step.annen-foreldrens-situasjon.grunn.verneplikt": "Verneplikt",
     "step.annen-foreldrens-situasjon.grunn.annet": "Annet",
-    "step.annen-foreldrens-situasjon.beskrivelseAvSituasjonen.spm": "Beskriv hva som gjør at den andre forelderen ikke er i stand til å ta seg av barn:",
-    "step.annen-foreldrens-situasjon.erVarighetMerEnn6Maneder.spm": "Perioden den andre forelderen ikke kan ta seg av barn må ha en varighet på minst 6 måneder, kan du bekrefte at dette er tilfelle?",
+    "step.annen-foreldrens-situasjon.beskrivelseAvSituasjonen.spm": "Beskriv hva som gjør at den andre forelderen ikke kan ha tilsyn med barn:",
+    "step.annen-foreldrens-situasjon.erVarighetMerEnn6Maneder.spm": "Perioden den andre forelderen ikke kan ha tilsyn med barn må ha en varighet på minst 6 måneder. Kan du bekrefte at dette er tilfelle?",
     "step.annen-foreldrens-situasjon.periode.innlagtIHelseinstitusjon.spm": "I hvilken periode gjelder innleggelsen?",
     "step.annen-foreldrens-situasjon.periode.fengsel.spm": "I hvilken periode gjelder soningen i fengsel?",
     "step.annen-foreldrens-situasjon.periode.verneplikt.spm": "I hvilken periode utføres verneplikten?",
@@ -123,7 +123,7 @@
     "step.oppsummering.annenForelder.header": "Om den andre forelderen",
 
     "step.oppsummering.annenForelderensSituasjon.header": "Den andre forelderens situasjon",
-    "step.oppsummering.annenForelderensSituasjon.erVarighetMerEnn6Maneder": "Har du bekreftet at den andre forelderen ikke er i stand til å ta seg av barn i periode på minst 6 måneder?",
+    "step.oppsummering.annenForelderensSituasjon.erVarighetMerEnn6Maneder": "Har du bekreftet at den andre forelderen ikke kan ha tilsyn med barn i en periode på minst 6 måneder?",
     "step.oppsummering.annenForelderensSituasjon.html": "<strong>Grunn: </strong>",
     "step.oppsummering.annenForelderensSituasjon.beskrivelse": "Beskrivelse av situasjonen:",
     "step.oppsummering.annenForelderensSituasjon.periode.header": "Periode når den andre forelderen ikke kan ha tilsyn med barnet/barna:",
