--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -67,9 +67,11 @@
     "step.annen-foreldrens-situasjon.grunn.annet": "Annet",
     "step.annen-foreldrens-situasjon.beskrivelseAvSituasjonen.spm": "Beskriv hva som gjør at den andre forelderen ikke kan ha tilsyn med barn:",
     "step.annen-foreldrens-situasjon.erVarighetMerEnn6Maneder.spm": "Er perioden på minst 6 måneder?",
+    "step.annen-foreldrens-situasjon.periode.sykdom.spm": "I hvilken periode er den andre forelderen ute av stand til å ha tilsyn med barn?",
     "step.annen-foreldrens-situasjon.periode.innlagtIHelseinstitusjon.spm": "I hvilken periode gjelder innleggelsen?",
     "step.annen-foreldrens-situasjon.periode.fengsel.spm": "I hvilken periode gjelder soningen i fengsel?",
     "step.annen-foreldrens-situasjon.periode.verneplikt.spm": "I hvilken periode utføres verneplikten?",
+    "step.annen-foreldrens-situasjon.periode.annet.spm": "I hvilken periode gjelder dette?",
     "step.annen-foreldrens-situasjon.periode.fra": "Fra",
     "step.annen-foreldrens-situasjon.periode.til": "Til",
     "step.annen-foreldrens-situasjon.periode.checkboxVetIkkeTom": "Jeg vet ikke hvor lenge perioden vil være",
