Liten tekst fiks

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -74,7 +74,7 @@
     "step.annen-foreldrens-situasjon.periode.annet.spm": "I hvilken periode gjelder dette?",
     "step.annen-foreldrens-situasjon.periode.fra": "Fra",
     "step.annen-foreldrens-situasjon.periode.til": "Til",
-    "step.annen-foreldrens-situasjon.periode.checkboxVetIkkeTom": "Jeg vet ikke hvor lenge perioden vil være",
+    "step.annen-foreldrens-situasjon.periode.checkboxVetIkkeTom": "Jeg vet ikke hvor lenge perioden vil vare",
     "step.annen-foreldrens-situasjon.vetLengdePåInnleggelseperioden.spm": "Er det avklart hvor lenge innleggelsen skal vare?",
     "step.annen-foreldrens-situasjon.advarsel.1": "Hvis perioden den andre forelderen ikke kan ta seg av barn er på mindre enn 6 måneder, kan det være at du ikke blir regnet som alene om omsorgen. Du kan likevel fortsette slik at vi kan vurdere søknaden din.",
     "step.annen-forelder-situasjon.nextButtonLabel": "Fortsett",
