--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -85,7 +85,7 @@
     "step.deres-felles-barn.spm.andreBarn": "Har du andre barn?",
     "step.deres-felles-barn.spm.flereBarn": "Har du flere barn?",
     "step.deres-felles-barn.info.ingenbarn.2": "Du må legge til minst ett barn for å kunne gå videre.",
-    "step.deres-felles-barn.info.spm.text": "Har du barn som ikke er registrert her, kan du legge inn disse selv. Det kan være fosterbarn, eller om du har barn som er fylt 18 år og som har ekstra omsorgsdager på grunn av kronisk sykdom eller funksjonshemning.",
+    "step.deres-felles-barn.info.spm.text": "Har du barn som ikke er registrert her, kan du legge inn disse selv. Det kan for eksempel være fosterbarn.",
     "step.deres-felles-barn.født": "Født",
     "step.deres-felles-barn.listDialog.knapplabel": "Legg til barn",
     "step.deres-felles-barn.listDialog.listTitle": "Andre barn",
