Liten typo nynorsk

--- a/src/app/i18n/nn.json
+++ b/src/app/i18n/nn.json
@@ -52,7 +52,7 @@
     "step.om-annen-forelder.banner.list.2": "og som ikkje kan ha tilsyn med barn i ein periode på minst 6 månader",
     "step.om-annen-forlder.fnr.spm": "Skriv inn fødselsnummeret til den andre forelderen, 11 siffer.",
     "step.om-annen-forlder.navn.spm": "Skriv inn namnet til den andre forelderen",
-    "step.om-annen-forelder.nextButtonLabel": "Hald fram.",
+    "step.om-annen-forelder.nextButtonLabel": "Hald fram",
 
     "step.annen-foreldrens-situasjon.tittel": "Situasjonen til den andre forelderen",
     "step.annen-forelder-situasjon.pageTitle": "Situasjonen til den andre forelderen",
